# C-CUDA

./: README.md
compile/: CMakeLists.txt  notes.md
kernel/: kernel.cu  kernel.h  notes.md
